--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.headerfooterloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.headerfooterloadoptions.yml
@@ -1,120 +1,126 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions:interface'
-    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.Interfaces.HeaderFooterLoadOptions
-    fullName: Excel.Interfaces.HeaderFooterLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.HeaderFooterLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.HeaderFooterLoadOptions#centerFooter:member'
-      - 'excel!Excel.Interfaces.HeaderFooterLoadOptions#centerHeader:member'
-      - 'excel!Excel.Interfaces.HeaderFooterLoadOptions#leftFooter:member'
-      - 'excel!Excel.Interfaces.HeaderFooterLoadOptions#leftHeader:member'
-      - 'excel!Excel.Interfaces.HeaderFooterLoadOptions#rightFooter:member'
-      - 'excel!Excel.Interfaces.HeaderFooterLoadOptions#rightHeader:member'
-  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#centerFooter:member'
-    summary: |-
-      工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+### YamlMime:TSType
+name: Excel.Interfaces.HeaderFooterLoadOptions
+uid: excel!Excel.Interfaces.HeaderFooterLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.HeaderFooterLoadOptions
+summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.HeaderFooterLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: centerFooter
+  uid: excel!Excel.Interfaces.HeaderFooterLoadOptions#centerFooter:member
+  package: excel!
+  fullName: centerFooter
+  summary: >-
+    工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: centerFooter
-    fullName: centerFooter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'centerFooter?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#centerHeader:member'
-    summary: |-
-      工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: centerHeader
-    fullName: centerHeader
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'centerHeader?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#leftFooter:member'
-    summary: |-
-      工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'centerFooter?: boolean;'
+    return:
+      type: boolean
+- name: centerHeader
+  uid: excel!Excel.Interfaces.HeaderFooterLoadOptions#centerHeader:member
+  package: excel!
+  fullName: centerHeader
+  summary: >-
+    工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: leftFooter
-    fullName: leftFooter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'leftFooter?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#leftHeader:member'
-    summary: |-
-      工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: leftHeader
-    fullName: leftHeader
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'leftHeader?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#rightFooter:member'
-    summary: |-
-      工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'centerHeader?: boolean;'
+    return:
+      type: boolean
+- name: leftFooter
+  uid: excel!Excel.Interfaces.HeaderFooterLoadOptions#leftFooter:member
+  package: excel!
+  fullName: leftFooter
+  summary: >-
+    工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rightFooter
-    fullName: rightFooter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rightFooter?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#rightHeader:member'
-    summary: |-
-      工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rightHeader
-    fullName: rightHeader
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rightHeader?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'leftFooter?: boolean;'
+    return:
+      type: boolean
+- name: leftHeader
+  uid: excel!Excel.Interfaces.HeaderFooterLoadOptions#leftHeader:member
+  package: excel!
+  fullName: leftHeader
+  summary: >-
+    工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'leftHeader?: boolean;'
+    return:
+      type: boolean
+- name: rightFooter
+  uid: excel!Excel.Interfaces.HeaderFooterLoadOptions#rightFooter:member
+  package: excel!
+  fullName: rightFooter
+  summary: >-
+    工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rightFooter?: boolean;'
+    return:
+      type: boolean
+- name: rightHeader
+  uid: excel!Excel.Interfaces.HeaderFooterLoadOptions#rightHeader:member
+  package: excel!
+  fullName: rightHeader
+  summary: >-
+    工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rightHeader?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 931c7cce11685e608e707b9d21676658cd9e6441
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49299007"
