--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.headerfooterupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.headerfooterupdatedata.yml
@@ -1,107 +1,114 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData:interface'
-    summary: '一个用于更新 HeaderFooter 对象上的数据的接口，可用于`headerFooter.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.HeaderFooterUpdateData
-    fullName: Excel.Interfaces.HeaderFooterUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.HeaderFooterUpdateData#centerFooter:member'
-      - 'excel!Excel.Interfaces.HeaderFooterUpdateData#centerHeader:member'
-      - 'excel!Excel.Interfaces.HeaderFooterUpdateData#leftFooter:member'
-      - 'excel!Excel.Interfaces.HeaderFooterUpdateData#leftHeader:member'
-      - 'excel!Excel.Interfaces.HeaderFooterUpdateData#rightFooter:member'
-      - 'excel!Excel.Interfaces.HeaderFooterUpdateData#rightHeader:member'
-  - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#centerFooter:member'
-    summary: |-
-      工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+### YamlMime:TSType
+name: Excel.Interfaces.HeaderFooterUpdateData
+uid: excel!Excel.Interfaces.HeaderFooterUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.HeaderFooterUpdateData
+summary: 一个用于更新 HeaderFooter 对象上的数据的接口，可用于 `headerFooter.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: centerFooter
+  uid: excel!Excel.Interfaces.HeaderFooterUpdateData#centerFooter:member
+  package: excel!
+  fullName: centerFooter
+  summary: >-
+    工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: centerFooter
-    fullName: centerFooter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'centerFooter?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#centerHeader:member'
-    summary: |-
-      工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: centerHeader
-    fullName: centerHeader
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'centerHeader?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#leftFooter:member'
-    summary: |-
-      工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'centerFooter?: string;'
+    return:
+      type: string
+- name: centerHeader
+  uid: excel!Excel.Interfaces.HeaderFooterUpdateData#centerHeader:member
+  package: excel!
+  fullName: centerHeader
+  summary: >-
+    工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: leftFooter
-    fullName: leftFooter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'leftFooter?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#leftHeader:member'
-    summary: |-
-      工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: leftHeader
-    fullName: leftHeader
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'leftHeader?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#rightFooter:member'
-    summary: |-
-      工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'centerHeader?: string;'
+    return:
+      type: string
+- name: leftFooter
+  uid: excel!Excel.Interfaces.HeaderFooterUpdateData#leftFooter:member
+  package: excel!
+  fullName: leftFooter
+  summary: >-
+    工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rightFooter
-    fullName: rightFooter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rightFooter?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData#rightHeader:member'
-    summary: |-
-      工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rightHeader
-    fullName: rightHeader
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rightHeader?: string;'
-      return:
-        type:
-          - string
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'leftFooter?: string;'
+    return:
+      type: string
+- name: leftHeader
+  uid: excel!Excel.Interfaces.HeaderFooterUpdateData#leftHeader:member
+  package: excel!
+  fullName: leftHeader
+  summary: >-
+    工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'leftHeader?: string;'
+    return:
+      type: string
+- name: rightFooter
+  uid: excel!Excel.Interfaces.HeaderFooterUpdateData#rightFooter:member
+  package: excel!
+  fullName: rightFooter
+  summary: >-
+    工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rightFooter?: string;'
+    return:
+      type: string
+- name: rightHeader
+  uid: excel!Excel.Interfaces.HeaderFooterUpdateData#rightHeader:member
+  package: excel!
+  fullName: rightHeader
+  summary: >-
+    工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rightHeader?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: f4354da9bef74510df78626df210ab8075406f9b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49298958"
