--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.imageloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.imageloadoptions.yml
@@ -1,78 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ImageLoadOptions:interface'
-    summary: |-
-      代表工作表中的图像。 若要获取相应的 Shape 对象，请使用 Image. Shape。
+### YamlMime:TSType
+name: Excel.Interfaces.ImageLoadOptions
+uid: excel!Excel.Interfaces.ImageLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ImageLoadOptions
+summary: >-
+  代表工作表中的图像。 若要获取相应的 Shape 对象，请使用 Image. Shape。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ImageLoadOptions
-    fullName: Excel.Interfaces.ImageLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ImageLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ImageLoadOptions#format:member'
-      - 'excel!Excel.Interfaces.ImageLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.ImageLoadOptions#shape:member'
-  - uid: 'excel!Excel.Interfaces.ImageLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ImageLoadOptions#format:member'
-    summary: |-
-      返回图像的格式。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ImageLoadOptions#id:member'
-    summary: |-
-      指定 image 对象的形状标识符。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ImageLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: format
+  uid: excel!Excel.Interfaces.ImageLoadOptions#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    返回图像的格式。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ImageLoadOptions#shape:member'
-    summary: |-
-      返回与图像关联的形状对象。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: shape
-    fullName: shape
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'shape?: Excel.Interfaces.ShapeLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
-    name: Excel.Interfaces.ShapeLoadOptions
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: excel!Excel.Interfaces.ImageLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    指定 image 对象的形状标识符。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: shape
+  uid: excel!Excel.Interfaces.ImageLoadOptions#shape:member
+  package: excel!
+  fullName: shape
+  summary: >-
+    返回与图像关联的形状对象。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'shape?: Excel.Interfaces.ShapeLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ShapeLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 340e1e97809f5519aca4b2c87d6617e8f5fd9f83
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49298818"
