--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.iterativecalculationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.iterativecalculationupdatedata.yml
@@ -1,59 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData:interface'
-    summary: '一个用于更新 IterativeCalculation 对象上的数据的接口，可用于`iterativeCalculation.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.IterativeCalculationUpdateData
-    fullName: Excel.Interfaces.IterativeCalculationUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.IterativeCalculationUpdateData#enabled:member'
-      - 'excel!Excel.Interfaces.IterativeCalculationUpdateData#maxChange:member'
-      - 'excel!Excel.Interfaces.IterativeCalculationUpdateData#maxIteration:member'
-  - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData#enabled:member'
-    summary: |-
-      如果 Excel 使用迭代来处理循环引用，则为 True。
+### YamlMime:TSType
+name: Excel.Interfaces.IterativeCalculationUpdateData
+uid: excel!Excel.Interfaces.IterativeCalculationUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.IterativeCalculationUpdateData
+summary: 一个用于更新 IterativeCalculation 对象上的数据的接口，可用于 `iterativeCalculation.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: enabled
+  uid: excel!Excel.Interfaces.IterativeCalculationUpdateData#enabled:member
+  package: excel!
+  fullName: enabled
+  summary: >-
+    如果 Excel 使用迭代来处理循环引用，则为 True。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: enabled
-    fullName: enabled
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'enabled?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData#maxChange:member'
-    summary: |-
-      指定在 Excel 解析循环引用时，每次迭代之间的最大更改量。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: maxChange
-    fullName: maxChange
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'maxChange?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData#maxIteration:member'
-    summary: |-
-      指定 Excel 可用于解析循环引用的最大迭代次数。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'enabled?: boolean;'
+    return:
+      type: boolean
+- name: maxChange
+  uid: excel!Excel.Interfaces.IterativeCalculationUpdateData#maxChange:member
+  package: excel!
+  fullName: maxChange
+  summary: >-
+    指定在 Excel 解析循环引用时，每次迭代之间的最大更改量。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: maxIteration
-    fullName: maxIteration
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'maxIteration?: number;'
-      return:
-        type:
-          - number
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'maxChange?: number;'
+    return:
+      type: number
+- name: maxIteration
+  uid: excel!Excel.Interfaces.IterativeCalculationUpdateData#maxIteration:member
+  package: excel!
+  fullName: maxIteration
+  summary: >-
+    指定 Excel 可用于解析循环引用的最大迭代次数。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'maxIteration?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: 1b51e4cdd75f4e00c21be8a71c6415035a6080f9
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49298923"
