--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.linkeddatatypecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.linkeddatatypecollectionloadoptions.yml
@@ -1,182 +1,178 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions:interface'
-    summary: |-
-      表示链接数据类型的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.LinkedDataTypeCollectionLoadOptions
+uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.LinkedDataTypeCollectionLoadOptions
+summary: >-
+  表示链接数据类型的集合。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: Excel.Interfaces.LinkedDataTypeCollectionLoadOptions
-    fullName: Excel.Interfaces.LinkedDataTypeCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#dataProvider:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#fontIconCodePoint:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#lastRefreshed:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#periodicRefreshInterval:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#refreshDataLoadWarnings:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#refreshMode:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#serviceId:member'
-      - 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#supportedRefreshModes:member'
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
-    isPreview: true
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#dataProvider:member'
-    summary: |-
-      对于集合中的每一项：链接数据类型的数据提供程序的名称。 当从服务中检索信息时，这可能会发生变化。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: dataProvider
-    fullName: dataProvider
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'dataProvider?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#fontIconCodePoint:member'
-    summary: |-
-      对于集合中的每一项：返回 "数据类型选项" 窗格中要使用的字体图标的代码点。 仅限第一方。
+  \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: true
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: dataProvider
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#dataProvider:member
+  package: excel!
+  fullName: dataProvider
+  summary: >-
+    对于集合中的每一项：链接数据类型的数据提供程序的名称。 当从服务中检索信息时，这可能会发生变化。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: fontIconCodePoint
-    fullName: fontIconCodePoint
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'fontIconCodePoint?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#lastRefreshed:member'
-    summary: |-
-      对于集合中的每个项目：本地时区日期和自上次刷新链接数据类型时打开工作簿的时间。 返回 `undefined` 是否尚未刷新链接的数据类型。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: lastRefreshed
-    fullName: lastRefreshed
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'lastRefreshed?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#name:member'
-    summary: |-
-      对于集合中的每一项：链接的数据类型的名称。 当从服务中检索信息时，这可能会发生变化。
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'dataProvider?: boolean;'
+    return:
+      type: boolean
+- name: fontIconCodePoint
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#fontIconCodePoint:member
+  package: excel!
+  fullName: fontIconCodePoint
+  summary: >-
+    对于集合中的每一项：返回 "数据类型选项" 窗格中要使用的字体图标的代码点。 仅限第一方。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#periodicRefreshInterval:member'
-    summary: |-
-      对于集合中的每一项：如果 `refreshMode` 设置为 "定期"，则刷新链接的数据类型的频率（以秒为单位）。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: periodicRefreshInterval
-    fullName: periodicRefreshInterval
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'periodicRefreshInterval?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#refreshDataLoadWarnings:member'
-    summary: |-
-      对于集合中的每一项：返回在尝试从工作簿加载此链接数据类型的刷新数据之后遇到的任何警告。 仅限第一方。
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'fontIconCodePoint?: boolean;'
+    return:
+      type: boolean
+- name: lastRefreshed
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#lastRefreshed:member
+  package: excel!
+  fullName: lastRefreshed
+  summary: >-
+    对于集合中的每个项目：本地时区日期和自上次刷新链接数据类型时打开工作簿的时间。 返回 `undefined` 是否尚未刷新链接的数据类型。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: refreshDataLoadWarnings
-    fullName: refreshDataLoadWarnings
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'refreshDataLoadWarnings?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#refreshMode:member'
-    summary: |-
-      对于集合中的每一项：检索链接数据类型的数据所依据的机制。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: refreshMode
-    fullName: refreshMode
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'refreshMode?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#serviceId:member'
-    summary: |-
-      对于集合中的每一项：链接数据类型的唯一 id。
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'lastRefreshed?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对于集合中的每一项：链接的数据类型的名称。 当从服务中检索信息时，这可能会发生变化。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: serviceId
-    fullName: serviceId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'serviceId?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#supportedRefreshModes:member'
-    summary: |-
-      对于集合中的每一项：返回一个数组，其中包含链接数据类型支持的所有刷新模式。 当从服务中检索信息时，数组的内容可能会发生变化。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: supportedRefreshModes
-    fullName: supportedRefreshModes
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'supportedRefreshModes?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: periodicRefreshInterval
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#periodicRefreshInterval:member
+  package: excel!
+  fullName: periodicRefreshInterval
+  summary: >-
+    对于集合中的每一项：如果 `refreshMode` 设置为 "定期"，则刷新链接的数据类型的频率（以秒为单位）。
+
+
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'periodicRefreshInterval?: boolean;'
+    return:
+      type: boolean
+- name: refreshDataLoadWarnings
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#refreshDataLoadWarnings:member
+  package: excel!
+  fullName: refreshDataLoadWarnings
+  summary: >-
+    对于集合中的每一项：返回在尝试从工作簿加载此链接数据类型的刷新数据之后遇到的任何警告。 仅限第一方。
+
+
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'refreshDataLoadWarnings?: boolean;'
+    return:
+      type: boolean
+- name: refreshMode
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#refreshMode:member
+  package: excel!
+  fullName: refreshMode
+  summary: >-
+    对于集合中的每一项：检索链接数据类型的数据所依据的机制。
+
+
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'refreshMode?: boolean;'
+    return:
+      type: boolean
+- name: serviceId
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#serviceId:member
+  package: excel!
+  fullName: serviceId
+  summary: >-
+    对于集合中的每一项：链接数据类型的唯一 id。
+
+
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'serviceId?: boolean;'
+    return:
+      type: boolean
+- name: supportedRefreshModes
+  uid: excel!Excel.Interfaces.LinkedDataTypeCollectionLoadOptions#supportedRefreshModes:member
+  package: excel!
+  fullName: supportedRefreshModes
+  summary: >-
+    对于集合中的每一项：返回一个数组，其中包含链接数据类型支持的所有刷新模式。 当从服务中检索信息时，数组的内容可能会发生变化。
+
+
+    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'supportedRefreshModes?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 7f182dd29fbe8ee4266a10d5413116212e22eaf8
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49298860"
