--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.mailboxenums.restversion.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.mailboxenums.restversion.yml
@@ -1,42 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
-    summary: |-
-      指定对应于 REST 格式的项目 ID 的 REST API 的版本。
+### YamlMime:TSEnum
+name: Office.MailboxEnums.RestVersion
+uid: outlook!Office.MailboxEnums.RestVersion:enum
+package: outlook!
+fullName: Office.MailboxEnums.RestVersion
+summary: >-
+  指定对应于 REST 格式的项目 ID 的 REST API 的版本。
 
-      \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读'
-    name: Office.MailboxEnums.RestVersion
-    fullName: Office.MailboxEnums.RestVersion
-    langs:
-      - typeScript
-    type: enum
-    package: outlook!
-    children:
-      - 'outlook!Office.MailboxEnums.RestVersion.Beta:member'
-      - 'outlook!Office.MailboxEnums.RestVersion.v1_0:member'
-      - 'outlook!Office.MailboxEnums.RestVersion.v2_0:member'
-  - uid: 'outlook!Office.MailboxEnums.RestVersion.Beta:member'
-    summary: Beta.
-    name: Beta
-    fullName: Beta
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"beta"'
-  - uid: 'outlook!Office.MailboxEnums.RestVersion.v1_0:member'
-    summary: 版本 1.0
-    name: v1_0
-    fullName: v1_0
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"v1.0"'
-  - uid: 'outlook!Office.MailboxEnums.RestVersion.v2_0:member'
-    summary: 版本 2.0
-    name: v2_0
-    fullName: v2_0
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"v2.0"'
+
+  \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读'
+isPreview: false
+isDeprecated: false
+fields:
+- name: Beta
+  uid: outlook!Office.MailboxEnums.RestVersion.Beta:member
+  package: outlook!
+  summary: Beta.
+- name: v1_0
+  uid: outlook!Office.MailboxEnums.RestVersion.v1_0:member
+  package: outlook!
+  summary: 版本 1.0
+- name: v2_0
+  uid: outlook!Office.MailboxEnums.RestVersion.v2_0:member
+  package: outlook!
+  summary: 版本 2.0
+metadata:
+  ms.openlocfilehash: cdab0460d27e8dba64e006be24dd15e5d409792e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340034"
